// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component should render a modal with a cancel and a submit button 1`] = `
<div>
  <div
    class="modal-container"
  >
    <div
      class="modal-container__content"
    />
    <div
      class="modal-container__footer"
    >
      <button
        class="button btn--rounded btn-secondary modal-container__footer-button"
      >
        Cancel
      </button>
      <button
        class="button btn--rounded btn-primary modal-container__footer-button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Component should render a modal with a header 1`] = `
<div>
  <div
    class="modal-container"
  >
    <div
      class="modal-container__header"
    >
      <div
        class="modal-container__header-text"
      >
        My Header
      </div>
      <div
        class="modal-container__header-close"
        data-testid="modal-header-close"
      />
    </div>
    <div
      class="modal-container__content"
    />
    <div
      class="modal-container__footer"
    >
      <button
        class="button btn--rounded btn-secondary modal-container__footer-button"
      >
        Cancel
      </button>
      <button
        class="button btn--rounded btn-primary modal-container__footer-button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Component should render a modal with a submit button 1`] = `
<div>
  <div
    class="modal-container"
  >
    <div
      class="modal-container__content"
    />
    <div
      class="modal-container__footer"
    >
      <button
        class="button btn--rounded btn-primary modal-container__footer-button"
      />
    </div>
  </div>
</div>
`;

exports[`Modal Component should render a modal with children 1`] = `
<div>
  <div
    class="modal-container"
  >
    <div
      class="modal-container__content"
    >
      <div
        class="test-child"
      />
    </div>
    <div
      class="modal-container__footer"
    >
      <button
        class="button btn--rounded btn-secondary modal-container__footer-button"
      >
        Cancel
      </button>
      <button
        class="button btn--rounded btn-primary modal-container__footer-button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Component should render a modal with different button types 1`] = `
<div>
  <div
    class="modal-container"
  >
    <div
      class="modal-container__content"
    />
    <div
      class="modal-container__footer"
    >
      <button
        class="button btn--rounded btn-default modal-container__footer-button"
      >
        Cancel
      </button>
      <button
        class="button btn--rounded btn-default modal-container__footer-button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;
